edition = "2023";

package openhdc.kube.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/openhdc/openhdc/api/kube/v1;v1";

service KubeService {
  // Helm Release
  rpc ListReleases(ListReleasesRequest) returns (ListReleasesResponse);     // helm list
  rpc CreateRelease(CreateReleaseRequest) returns (Release);                // helm install
  rpc DeleteRelease(DeleteReleaseRequest) returns (google.protobuf.Empty);  // helm remove
  rpc UpgradeRelease(UpgradeReleaseRequest) returns (Release);              // helm upgrade
  rpc RollbackRelease(RollbackReleaseRequest) returns (Release);            // helm rollback

  // Helm Repository
  rpc ListRepositories(ListRepositoriesRequest) returns (ListRepositoriesResponse);  // helm repo list
  rpc CreateRepository(CreateRepositoryRequest) returns (Repository);                // helm repo add
  rpc UpdateRepository(UpdateRepositoryRequest) returns (Repository);                // helm repo update
  rpc DeleteRepository(DeleteRepositoryRequest) returns (google.protobuf.Empty);     // helm repo remove

  // Native
  rpc ListApplications(ListApplicationsRequest) returns (ListApplicationsResponse);
}

message Release {
  // ReleaseValues
  // Providers
  // settings
  // history
}

message Repository {}

message Application {
  message Service {
    message Port {
      int32 port = 1;
      int32 node_port = 2;
      string protocol = 3;
      string target_port = 11;
    }
    string type = 1;
    string cluster_ip = 2;
    repeated Port ports = 11;
  }
  message Pod {
    message Container {
      string name = 1;
      string image = 2;
    }
    string name = 1;
    string status = 2;
    string ready = 3;
    string restarts = 4;
  }
  message PersistentVolumeClaim {
    string status = 1;
    repeated string access_modes = 2;
    string capacity = 3;
    string storage_class_name = 4;
  }
  message StorageClass {
    string provisioner = 1;
    string reclaimPolicy = 2;
    string volume_binding_mode = 3;
    map<string, string> parameters = 11;
  }
  string name = 1;
  string namespace = 2;
  map<string, string> labels = 3;
  int32 replicas = 11;
  string strategy_type = 21;
  string image = 31;
  string image_pull_policy = 32;
  Service service = 101;
  repeated Pod pods = 102;
  repeated PersistentVolumeClaim persistent_volume_claims = 103;
  map<string, StorageClass> storage_class_map = 201;
}

message ListReleasesRequest {}

message ListReleasesResponse {}

message CreateReleaseRequest {}

message DeleteReleaseRequest {}

message UpgradeReleaseRequest {}

message RollbackReleaseRequest {}

message ListRepositoriesRequest {}

message ListRepositoriesResponse {}

message CreateRepositoryRequest {}

message UpdateRepositoryRequest {}

message DeleteRepositoryRequest {}

message ListApplicationsRequest {
  string model_uuid = 1;
  string cluster_name = 2;
}

message ListApplicationsResponse {
  repeated Application applications = 1;
}